fix for editor menu background in dark mode

--- a/dragonbane.css
+++ b/dragonbane.css
@@ -953,6 +953,7 @@
   padding-top: 4px;
   padding-bottom: 4px;
   margin-top: 16px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .system-dragonbane .text-box-editor .editor-container {
   margin: 0;
