--- a/scss/components/_text-box.scss
+++ b/scss/components/_text-box.scss
@@ -102,7 +102,8 @@
         .editor-menu {
             padding-top: 4px;
             padding-bottom: 4px;
-            margin-top: 16px
+            margin-top: 16px;
+            background-color: rgba(0, 0, 0, 0.1);
         }
 
         .editor-container {
